# rust-getting-started

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  pr.yaml
01_intro/: main.rs
03_compand/: main.rs
04_array-tuple/: main.rs
05_vector/: main.rs
06_functions/: main.rs
07_ownership/: main.rs
08_immutab_ref/: main.rs
10_loop/: main.rs
11_forloop/: main.rs
12_quiz/: main.rs
13_struct/: main.rs
14_trait/: main.rs
2_variable/: main.rs
advanced/_01_associated/: Cargo.toml
advanced/_02_iterators/: Cargo.toml
advanced/_03_dispatch/: Cargo.toml
advanced/_04_partial_order/: Cargo.toml
advanced/_05_struct_init/: Cargo.toml
advanced/_06_consts/: Cargo.toml
advanced/_07_thread/: Cargo.toml
advanced/_08_channels/: Cargo.toml
advanced/_09_concurrency/: Cargo.toml
advanced/_09_shared_state/: Cargo.toml
advanced/_10_fibonacci/: Cargo.toml
advanced/_11_actor/: Cargo.toml
advanced/_12_stack/: Cargo.toml
advanced/_12_windows_api/: Cargo.toml
advanced/_13_bench/: Cargo.toml
advanced/_13_bench/benches/: sorting_benchmark.rs
advanced/_13_bench/src/: lib.rs
advanced/_14_channel/: Cargo.toml
advanced/_14_channel/src/: main.rs
advanced/_15_channel_2/: Cargo.toml
advanced/_15_notify/: Cargo.toml
advanced/_16_notify/: Cargo.toml
advanced/_16_workers/: Cargo.toml
advanced/_17_actor/: Cargo.toml
advanced/_17_workers/: Cargo.toml
advanced/_18_actor/: Cargo.toml
advanced/_19_fetch/: Cargo.toml
advanced/_20_phantom/: Cargo.toml
banner/: Cargo.toml
banner/src/: lib.rs
basics/_02_variable/: Cargo.toml
basics/_04_array-tuple/: Cargo.toml
basics/_05_vector/: Cargo.toml
basics/_06_functions/: Cargo.toml
basics/_07_ownership/: Cargo.toml
basics/_08_immutab_ref/: Cargo.toml
basics/_09_condition/: Cargo.toml
basics/_11_forloop/: Cargo.toml
basics/_12_quiz/: Cargo.toml
basics/_14_trait/: Cargo.toml
basics/_15_enum/: Cargo.toml
basics/_16_generic/: Cargo.toml
basics/_18_result/: Cargo.toml
basics/_19_hashmap/: Cargo.toml
basics/_20_lifetime/: Cargo.toml
basics/_23_iterators/: Cargo.toml
basics/_24_module/: Cargo.toml
basics/_26_singlylist/: Cargo.toml
basics/_28_refcell/: Cargo.toml
basics/_29_doublelinked/: Cargo.toml
basics/_30_memory_leak/: Cargo.toml
basics/_32_capturetype/: Cargo.toml
basics/_33_unittype/: Cargo.toml
src/: banner.rs  lib.rs  main.rs
(+151 files in other folders)
