[package]
name = "rust-intro"
version = "0.1.0"
edition = "2021"
authors = ["Ramazan AYYILDIZ <ramazan@ayyildiz.rs>"]
description ="Introduction to Rust"
readme = "README.md"
homepage = "https://ayyildiz.rs"
repository = "https://github.com/rayyildiz/rust-getting-started"
license-file = "LICENSE"
keywords = ["rust", "examples","getting-started"]
include = ["/src", "/examples", "!/examples/big_example"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
# strip = true
# opt-level = "s"
# lto = true
# codegen-units = 1