[workspace]
resolver = "2"
members = [
    "banner",
    "basics/*",
    "problems/*",
    "advanced/*"
]

[workspace.package]
version = "0.1.2"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1" }
actix = { version = "0.13" }

# Optimize release
#[profile.release]
# strip = true
# opt-level = "s"
# lto = true
# codegen-units = 1