[package]
name = "_13_bench"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
banner = { path = "../../banner" }
criterion = "0.5"


[[bench]]
name = "sorting_benchmark"
harness = false