[package]
name = "_14_channel"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
banner = { path = "../../banner" }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread", "sync"] }

